package ucf.assignments;

public class FileManager {
    public static void saveAsCSV(String filename) {
        /*
        open up filename
        for each item in the item model
            write the item to file as sn,name,price
        close file
         */
    }

    public static void saveAsJSON(String filename) {
        /*
        open up filename
        for each item in the item model
            write the item to file as sn,name,price
        close file
         */
    }

    public static void saveAsHTML(String filename) {
        /*
        open up filename
        for each item in the item model
            write the item to file as sn,name,price
        close file
         */
    }
}
