package ucf.assignments;

import javafx.collections.FXCollections;
import javafx.collections.ObservableList;

public class ItemModel {
    private ObservableList<?> data = FXCollections.observableArrayList();
}
